--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
       <link rel="stylesheet" href="style.css" />
-      <title>{% block title %}{% endblock %} - My Webpage</title>
+      <title>{% block title %}{{ page_title }}{{ title_sep }}{{ site_title }}{% endblock %}</title>
 
       <!-- Bootstrap -->
       <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
